# metastable-nucleation-suite

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  LICENSE  LICENSE-DOCS  LICENSE-DOCS.md  MANIFEST.in  Makefile  ONBOARDING.md  README.md  REVIEWING.md  SECURITY.md  compose.yaml  pyproject.toml  references.bib
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  experiment-proposal.yml  onboarding.yml  pbi.yml
.github/workflows/: ci.yml  codeql.yml  polyglot.yml  publish-version.yml  references.yml  release.yml  semantic.yml  specifications.yml  verify-v0.3.0-release.yml
benchmarks/: power-calibration.json
contracts/: README.md
contracts/v1/: control-plane-artifact.schema.json  (+4 more)
deploy/: Dockerfile.control-plane  Dockerfile.platform-cli  Dockerfile.scientific-worker
docs/: 01_marco_cientifico.md  02_matriz_hipotesis.md  03_suite_experimentos.md  04_laboratorio_metaestados_opticos.md  05_estadistica_y_falsacion.md  06_hoja_de_ruta.md  07_seguridad_y_limites.md  08_referencias_comentadas.md  09_fuentes_por_experimento.md  10_plantilla_preregistro.md  11_contrato_de_datos.md  12_matriz_de_fallos_y_lagunas.md  13_ontologia_semantica.md  14_motor_ejecucion_hardware_y_potencia.md  15_adaptadores_hardware.md  15_almacenamiento_eventos.md  16_calibracion_potencia_monte_carlo.md  16_metastate_atlas_and_nucleation_defined_circuitry.md  17_control_plane.md  17_nucleation_encoded_chalcogenide_ensembles.md  18_architecture_and_contribution_map.md  18_nece_positioning_competitors_and_go_no_go.md  18_nucleation_encoded_chalcogenide_ensembles.md  19_community_outreach_and_publication_plan.md  19_nece_positioning_competitors_and_go_no_go.md  20_nece_fabrication_and_individual_research_path.md  20_zenodo_arxiv_archiving_workflow.md  21_nece_material_procurement_and_budget.md  22_scalar_metastable_capacity_model.md
dotnet/: Directory.Build.props  Metastable.Platform.sln
examples/: hardware-backends.json  reference-report.json
experiments/: catalog.schema.json  catalog.yaml  specifications.schema.json  specifications.yaml
ontology/: abox-shapes.ttl  abox.schema.json  context.jsonld  dataset-storage-extension.ttl  dataset-storage-shapes.ttl  execution-extension.ttl  execution-shapes.ttl  tbox.ttl
schemas/: backend-config.schema.json  dataset-registry.schema.json  event.schema.json
scripts/: calibrate_power.py  check_control_plane_contract.py  check_extend0_release.py  check_release_version.py  check_visualizer_language_policy.py  dataset_storage.py  metastate_capacity.py  monte_carlo_power.py  nucleation_encoded_capacity.py  package_release.py  plan_experiment.py  run_suite.py  semantic_execute.py  semantic_graph.py  smoke_control_plane.py  validate_catalog.py  validate_reference_report.py  validate_specifications.py  verify_references.py
services/: scientific_worker.py
tests/: test_adversarial.py  test_backend_config.py  test_bell.py  test_campaign_execution_kind_resume.py  test_campaign_resume_context.py  test_campaigns.py  test_catalog.py  test_columnar_datasets.py  test_dataset_review_regressions.py  test_dataset_storage_cli.py  test_datasets.py  test_execution_engine.py  test_hardware_backends.py  test_hardware_transports.py  test_injected_registry_resume.py  test_metastate_capacity.py  test_monte_carlo_power.py  test_nucleation.py  test_nucleation_encoded_capacity.py  test_optical.py  test_parquet_regressions.py  test_parquet_single_partition.py  test_power_calibration.py  test_power_planning.py  test_reference_report.py  test_report_provenance.py  test_scientific_worker.py  test_semantic.py  test_semantic_execute_cli.py  test_semantic_hardware_execution.py  test_versioning.py  test_visualization_scene_contract.py  test_visualizer_language_policy.py
visualizer/: Cargo.toml  README.md  adapter-capabilities.json
visualizer/src/: gpu.rs  lib.rs  render.rs  scene.rs
visualizer/tests/: conformance.rs  wasm.rs
visualizer/tests/support/: mod.rs
(+54 files in other folders)
