[workspace]
members = ["visualizer"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.97"
version = "0.1.0"

[workspace.dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
wasm-bindgen = "0.2.126"
wgpu = { version = "30.0.0", default-features = false, features = ["webgl", "webgpu", "wgsl"] }
