[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metastable-nucleation-suite"
version = "0.1.0"
description = "Reference experiments and models for nucleation, metastability, polymorphs and optical nonlocality tests"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Daniel Molinero Lucas"}]
dependencies = [
  "numpy>=1.24",
  "PyYAML>=6",
  "rdflib>=7",
  "pyshacl>=0.29",
  "jsonschema>=4"
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]

[tool.ruff]
line-length = 110
