[package]
name = "metastable-visualizer"
description = "Rust/WASM scientific visualizer for metastable experiment configurations"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
wasm-bindgen.workspace = true
wgpu.workspace = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "deny"
pedantic = "deny"
