[package]
name = "metastable-visualizer"
description = "Rust/WASM scientific visualizer for metastable experiment configurations"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_path_to_error.workspace = true
thiserror.workspace = true
time.workspace = true
wasm-bindgen.workspace = true
wgpu.workspace = true

[dev-dependencies]
wasm-bindgen-test = "0.3.76"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "deny"
pedantic = "deny"
